--- a/web/WEB-INF/jsp/map.html
+++ b/web/WEB-INF/jsp/map.html
@@ -178,7 +178,7 @@
                     </li>
                     <li><a href="plain_page.html">Plain Page</a>
                     </li>
-                    <li><a href="login.html">Login Page</a>
+                    <li><a href="login.jsp">Login Page</a>
                     </li>
                     <li><a href="sign_up.html">SignUp Page</a>
                     </li>
@@ -206,7 +206,7 @@
             <a data-toggle="tooltip" data-placement="top" title="Lock">
               <span class="glyphicon glyphicon-eye-close" aria-hidden="true"></span>
             </a>
-            <a data-toggle="tooltip" data-placement="top" title="Logout" href="login.html">
+            <a data-toggle="tooltip" data-placement="top" title="Logout" href="login.jsp">
               <span class="glyphicon glyphicon-off" aria-hidden="true"></span>
             </a>
           </div>
@@ -247,7 +247,7 @@
                       <li>
                         <a href="javascript:;">Help</a>
                       </li>
-                      <li><a href="login.html"><i class="fa fa-sign-out pull-right"></i> Log Out</a>
+                      <li><a href="login.jsp"><i class="fa fa-sign-out pull-right"></i> Log Out</a>
                       </li>
                     </ul>
                   </li>
